--- a/.gitignore
+++ b/.gitignore
@@ -3,12 +3,11 @@
 revision.py
 cache/
 .cache/
-floodsystem/__pycache__/
-tests/__pycache__/
 __pycache__/
-*/__pycache__/
 plotly_credentials.py
 *.html
+./*.html
+*html
 
 # OS generated files #
 ######################
